--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Boarding schools -- England -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Students -- Juvenile fiction'
+- GITenberg
 title: Tom, Dick and Harry
 url: http://www.gutenberg.org/ebooks/20992
